# ktds-bidmate

./: .env.sample  README.md  pyproject.toml  requirements.txt  streamlit.sh
data/history_csv/: project_history.csv
data/preprocess_results/: project_history.json
data/solution_json/: solution.json
index/: upload_history_data.py  upload_solution_data.py
preprocess/: generate_enriched_history.py  generate_enriched_solution.py  generate_json_history.py
rag/: app.py
